# PyListing

./: README.md
backend/: Dockerfile  README.md  compose.yaml  pyproject.toml
backend/backend/: app.py  database.py  models.py  schemas.py  security.py
backend/backend/routers/: auth.py  brands.py  lists.py  products.py  users.py
backend/migrations/versions/: 09586753711d_corrected_monetary_format.py  0ba35a3f1fbf_fix_models.py  239b27fda31e_corrected_monetary_format.py  2bf773ceb432_major_table_refactor.py  4185fd2acab8_refactor_basic_models.py  4578196e1ea5_fix_models.py  555de472fa04_testando_relações_bidirecionais_.py  67d4cb9e7af8_add_shopping_list_id_in_product.py  80cb213f853f_add_default_values_in_product_model.py  906fbf9c3c25_fix_models.py  96642451e1cf_fixed_model_relationships.py  9b828a2677c3_add_repr_config_to_avoid_loops.py  a174ae73452c_coloquei_o_tipo_correto_no_campo_.py  b52a31474e55_removed_bidirecional_relationships.py  b7af043e9d8e_correções_nos_valores_numéricos.py  bfdd97d519d4_testando_relações_bidirecionais_.py  d4e91a4763ab_fix_models.py  de40bd4e5b54_fix_shopping_list_id_in_product.py  e26058554c59_fix_in_the_initialization_from_some_ids.py  e42a5bf225e6_fix_product_reference_in_brand_model.py  f7057345614e_create_basic_tables.py  f8b5f3ee342c_add_cascade_rule.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_brands.py  test_lists.py  test_products.py  test_security.py  test_users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/ProtectedRoute/: ProtectedRoute.model.tsx  ProtectedRoute.tsx  protectedRoute.model.ts  protectedRoute.view.tsx
frontend/src/components/brand/: Brand.tsx  brand.model.ts  brand.types.ts  brand.view.tsx
frontend/src/components/product/: Product.tsx  product.model.ts  product.model.tsx  product.schema.ts  product.type.ts  product.view.tsx
frontend/src/hooks/: useInputNavigation.ts
frontend/src/pages/home/: Home.tsx  guestSection.view.tsx  home.model.ts  home.schemas.ts  home.type.ts  userSection.view.tsx
frontend/src/pages/list/: List.tsx  list.model.ts  list.schema.ts  list.type.ts  list.view.tsx
frontend/src/pages/signin/: Signin.tsx  signin.model.ts  signin.schema.ts  signin.type.ts  signin.view.tsx
frontend/src/pages/signup/: SignUp.tsx  signup.model.ts  signup.schema.ts  signup.type.ts  signup.view.tsx
frontend/src/services/auth/: authService.ts  authService.type.ts  authServices.ts  authServices.type.ts
(+9 files in other folders)
